--- a/styles/project_add.css
+++ b/styles/project_add.css
@@ -16,7 +16,7 @@ h6 {
 
 body {
   font-family: "Raleway", sans-serif;
-  background-color: #f8f9fa;
+  background-color: #c1c1c1;
   color: #333;
   padding-top: 80px;
   /* Navbar height */
